[package]
name = "yadir"
version = "0.2.0"
edition = "2021"
authors = ["Sami Barbut-Dica"]
license-file = "../LICENSE"
readme = "../README.md"
homepage = "https://github.com/WarriorsSami/yadir"
repository = "https://github.com/WarriorsSami/yadir"
description = "Yet Another Dependency Injection Registry for Rust"
keywords = ["dependency-injection", "registry", "runtime"]
categories = ["rust-patterns"]

[dependencies]
async-trait = "0.1.81"
tokio = { version = "1.38.0", features = ["full"] }
claim = "0.5.0"
dyn-clone = "1.0.17"
