[package]
name = "yadir"
version = "0.2.2"
edition = "2021"
authors = ["Sami Barbut-Dica"]
license-file = "../LICENSE"
readme = "../README.md"
homepage = "https://github.com/WarriorsSami/yadir"
repository = "https://github.com/WarriorsSami/yadir"
description = "Yet Another Dependency Injection Registry for Rust"
keywords = ["dependency-injection", "registry", "runtime"]
categories = ["rust-patterns"]
rust-version = "1.70.0"

[features]
derive = ["dep:yadir_derive"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
claim = { workspace = true }
dyn-clone = "1.0.17"
yadir_derive = { version = "0.1.1", optional = true, path = "../yadir_derive" }

[dev-dependencies]
yadir_derive = { version = "0.1.1", path = "../yadir_derive" }
